# xenoform-rs

./: .gitignore  .pre-commit-config.yaml  LICENCE.md  README.md  pyproject.toml
.github/workflows/: lint-test.yml  publish.yml
examples/: distance_matrix.py  loop.py
src/test/: fibonacci.rs  other_module.py  test_1.py  test_basic.py  test_basic_again.py  test_callable.py  test_complex.py  test_compound_type_error.py  test_compound_types.py  test_config.py  test_container_types.py  test_edition_conflict.py  test_edition_invalid.py  test_freethreaded.py  test_help.py  test_inplace.py  test_kwargs.py  test_method.py  test_modules.py  test_modules_error.py  test_nested.py  test_numpy.py  test_profile_conflict.py  test_profile_invalid.py  test_slice.py  test_types.py  test_typing.py  test_utils.py
src/xenoform_rs/: __init__.py  compile.py  config.py  errors.py  extension_types.py  rustmodule.py  utils.py
