[project]
name = "xenoform-rs"
version = "0.1.1"
description = "Inlined rust functions"
readme = "README.md"
authors = [
    { name = "virgesmith", email = "andrew@friarswood.net" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
dependencies = [
    "itrx>=0.2.1",
    "numpy>=2.4.3",
    "pydantic-settings>=2.13.1",
]

[project.urls]
"Homepage" = "https://github.com/virgesmith/xenoform-rs"
"Bug Tracker" = "https://github.com/virgesmith/xenoform-rs/issues"

[project.scripts]
xenoform-rs = "xenoform_rs:main"

[build-system]
requires = ["uv_build>=0.11.0,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.6",
    "ty>=0.0.23",
]

[project.optional-dependencies]
examples = [
    "pandas>=3.0",
]


[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ARG", "B", "C", "D103", "E", "F", "I", "N", "PERF", "PTH", "RET", "RUF", "SIM", "UP", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/test/*.py" = ["D103"]
